components/centraldashboard/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dashboard
  name: dashboard
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8082
  selector:
    app: dashboard
  sessionAffinity: None
  type: ClusterIP
